hphp/hack/test/typecheck/property_declaration_missing_visibility_modifier.php.exp
File "property_declaration_missing_visibility_modifier.php", line 3, characters 7-7:
A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. (Parsing[1002])
